# literary_award

./: .gitignore  README.md  alarms.txt  pyproject.toml
app/: main.py
app/config/: config.py
app/wikipedia_parsers/: __init__.py  base.py  big_book.py  nat_best.py
cache/: bigbook_cache.json  natbest_cache.json
results/: bigbook_awards.json  bigbook_table.csv  bigbook_table.xlsx  natbest_awards.json  natbest_table.csv  natbest_table.xlsx
