[tool.poetry]
name = "literary-award"
version = "0.1.0"
description = ""
authors = ["fedor.khandar <fedorkhandar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
orjson = "^3.9.10"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
